Finish formatting for Elsevier. Submit to SLMS.

--- a/paper.tex
+++ b/paper.tex
@@ -24,7 +24,7 @@
 \shorttitle{Model for PS Structures with a Lateral Gradient}
 \shortauthors{Ospina-Delacruz et al.}
 \title[mode=title]{Model for Porous Silicon Structures with a Lateral Gradient}
-\author[1]{C. A. Ospina-Delacruz}[orcid=0000-0000-0000-0000]
+\author[1]{C. A. Ospina-Delacruz}[orcid=0000-0002-9609-3031]
 \ead{crisalod@gmail.com}
 \credit{Investigation; Software; Writing - original draft}
 \author[1,2]{V. Agarwal}[orcid=0000-0003-2168-853X]
@@ -32,7 +32,7 @@
 \ead{vagarwal@uaem.mx}
 \credit{Funding acquisition; Investigation; Supervision; Software; Writing - review \& editing}
 \author[2]{W. L. Mochán}[type=editor,orcid=0000-0003-0418-5375]
-%\cormark[1]
+\cormark[cor1]
 \ead{mochan@fis.unam.mx}
 \credit{Conceptualization; Funding acquisition; Investigation;
   Methodology; Supervision; Writing - review \& editing}
@@ -44,7 +44,7 @@
   Autonóma de México, Av. Universidad S/N, Col. Chamilpa, 62210
   Cuernavaca, Morelos, México}
 \fntext[fn1]{On sabatical leave at ICF-UNAM from CIICAP-UAEM.}
-%\cortext[cor1]{Corresponding author}
+\cortext[cor1]{Corresponding author}
 
 \begin{keywords}
   Porous Silicon\sep GRIN \sep Reflectance Spectra.
@@ -996,7 +996,7 @@ that may be employed for other samples grown in the same conditions.
 \section*{Acknowledgments}
 \label{sec:acknowledgments}
 CAOD is grateful for a scholarship from CONACyT and to
-V. Castillo-Gallardo for useful discussions. VA acknowledges support
+V. Castillo-Gallardo and L.E. Puente Díaz for useful discussions. VA acknowledges support
 from CONACyT Basic Sciences project A-S1 30393 and from PRODEP, and is
 grateful to ICF where she spent a sabatical.
 WLM acknowledges the support of DGAPA-UNAM under grant
