Change title and journal in paper and cover letter

--- a/paper.tex
+++ b/paper.tex
@@ -21,9 +21,10 @@
 \newcommand{\notaV}[1]{{\color{red}+V:#1+}}
 
 \begin{document}
-\shorttitle{Model for PS Structures with a Lateral Gradient}
+\shorttitle{Model for the ECh Sythesis of PS Structures with a Lateral Gradient}
 \shortauthors{Ospina-Delacruz et al.}
-\title[mode=title]{Model for Porous Silicon Structures with a Lateral Gradient}
+\title[mode=title]{Model for the Electrochemical Synthesis of Porous
+  Silicon Structures with a Lateral Gradient}
 \author[1]{C. A. Ospina-Delacruz}[orcid=0000-0002-9609-3031]
 \ead{crisalod@gmail.com}
 \credit{Investigation; Software; Writing - original draft}
