--- a/paper.tex
+++ b/paper.tex
@@ -21,10 +21,12 @@
 \newcommand{\notaV}[1]{{\color{red}+V:#1+}}
 
 \begin{document}
-\shorttitle{Model for the ECh Sythesis of PS Structures with a Lateral Gradient}
+\shorttitle{Model of the Current Density in the Electrochemical
+  Synthesis of PS Structures with a Lateral Gradient}
 \shortauthors{Ospina-Delacruz et al.}
-\title[mode=title]{Model for the Electrochemical Synthesis of Porous
-  Silicon Structures with a Lateral Gradient}
+\title[mode=title]{Analytical Model for the Current Density in
+the Electrochemical Synthesis of Porous Silicon Structures with a
+Lateral Gradient}
 \author[1]{C. A. Ospina-Delacruz}[orcid=0000-0002-9609-3031]
 \ead{crisalod@gmail.com}
 \credit{Investigation; Software; Writing - original draft}
@@ -33,7 +35,7 @@
 \ead{vagarwal@uaem.mx}
 \credit{Funding acquisition; Investigation; Supervision; Software; Writing - review \& editing}
 \author[2]{W. L. Mochán}[type=editor,orcid=0000-0003-0418-5375]
-\cormark[cor1]
+\cormark[1]
 \ead{mochan@fis.unam.mx}
 \credit{Conceptualization; Funding acquisition; Investigation;
   Methodology; Supervision; Writing - review \& editing}
@@ -46,34 +48,38 @@
   Cuernavaca, Morelos, México}
 \fntext[fn1]{On sabatical leave at ICF-UNAM from CIICAP-UAEM.}
 \cortext[cor1]{Corresponding author}
-
 \begin{keywords}
-  Porous Silicon\sep GRIN \sep Reflectance Spectra.
+  Porous Silicon\sep GRIN \sep Reflectance Spectra.\sep
 \end{keywords}
-
 \maketitle
-
 \begin{abstract}
-A variety of optical devices and applications may be based on layered
-systems which have a lateral gradient in both their refractive indices
-and their thicknesses. They may be fabricated of porous silicon (PS) through an
-electrochemical process in which the etching current depends on position. Thus, the possibility of
-predicting the local current density $j$ and the corresponding
-porosity $p$ and etching rate $v$ would be desirable for a systematic design of these
-structures. In this work, we propose a
-simple model for the calculation of $j$
-as a function of position within an electrochemical cell. We prepared
-some graded single layer PS samples, measured their optical properties through
-ultraviolet-visible-near infrared reflectance
-spectroscopy, and related them
-to their local porosity and thickness which, together with our model, were then used to obtain
-the $p$ vs. $j$ and $v$ vs. $j$ calibration curves.  The dependence of
-porosity and thickness with position was corroborated through scanning electron microscopy. We
-compared the calibration curves for different samples. Thus, from
-measurements on only one, or a few simple systems, we may obtain full
-calibration curves which may be used to predict, design, and fabricate
-more complex novel non-homogenous devices with lateral gradients which can be used
-for manifold applications.
+  A variety of optical devices and applications are based on
+  layered systems which have a lateral gradient in both their
+  refractive indices and their thicknesses. Simple fabrication of such
+  systems can be carried out through the electrochemical synthesis of
+  porous silicon (PS) using an etching current with a density $\bm
+  j(\bm r_\|)$ that has a spatial variation along the surface of the
+  sample. Thus, the possibility of predicting the local
+  value of $\bm j(\bm r_\|)$ and the corresponding values of the porosity
+  $p(\bm r_\|)$ and the etching rate $v(\bm r_\|)$ is desirable for a
+  systematic design of these structures.
+  In this work, we propose a simple analytical model based on a simple
+  fast converging planewise summation of Coulomb potentials in two
+  dimensional reciprocal space for the
+  calculation of $\bm j(\bm r_\|)$ as a function of position
+  within a prism shaped electrochemical cell. Some graded single layer PS samples
+  were synthesized and their optical reflectance were used to
+  estimate their local porosity $p(\bm r_\|)$ and thickness $d(\bm r_\|)$
+  which, together with our model, were then used to obtain the basic
+  calibration curves $p$ vs $\bm j$ and $v$ vs $\bm j$.
+  The dependence of porosity and thickness with position was
+  corroborated through scanning electron microscopy.
+  Agreement was found between the calibration curves from
+  different samples. Thus, from measurements on only one system, full
+  calibration curves may be obtained and used to predict, design, and
+  fabricate more complex novel non-homogenous multilayered devices with lateral
+  gradients which can be used for manifold applications.
+
 \end{abstract}
 
 \section{Introduction}
