Insert and correct new abstract by Vivechna

--- a/paper.tex
+++ b/paper.tex
@@ -63,7 +63,7 @@ Lateral Gradient}
   value of $\bm j(\bm r_\|)$ and the corresponding values of the porosity
   $p(\bm r_\|)$ and the etching rate $v(\bm r_\|)$ is desirable for a
   systematic design of these structures.
-  In this work, we propose a simple analytical model based on a simple
+  In this work, we propose a simple analytical model based on a
   fast converging planewise summation of Coulomb potentials in two
   dimensional reciprocal space for the
   calculation of $\bm j(\bm r_\|)$ as a function of position
@@ -75,11 +75,11 @@ Lateral Gradient}
   The dependence of porosity and thickness with position was
   corroborated through scanning electron microscopy.
   Agreement was found between the calibration curves from
-  different samples. Thus, from measurements on only one system, full
-  calibration curves may be obtained and used to predict, design, and
-  fabricate more complex novel non-homogenous multilayered devices with lateral
-  gradients which can be used for manifold applications.
-
+  different samples. Thus, from measurements on only one sample, our
+  model allows us to obtain full calibration curves which may be
+  used to predict, design, and fabricate more complex novel
+  non-homogenous multilayered devices with lateral gradients for
+  manifold applications.
 \end{abstract}
 
 \section{Introduction}
