Don't pluralize thickness

--- a/paper.tex
+++ b/paper.tex
@@ -55,7 +55,7 @@ Lateral Gradient}
 \begin{abstract}
   A variety of optical devices and applications are based on
   layered systems which have a lateral gradient in both their
-  refractive indices and their thicknesses. Simple fabrication of such
+  refractive indices and their thickness. Simple fabrication of such
   systems can be carried out through the electrochemical synthesis of
   porous silicon (PS) using an etching current with a density $\bm
   j(\bm r_\|)$ that has a spatial variation along the surface of the
