Shorten abstract to 150 words

--- a/paper.tex
+++ b/paper.tex
@@ -53,34 +53,52 @@ Lateral Gradient}
 \end{keywords}
 \maketitle
 \begin{abstract}
-  A variety of optical devices and applications are based on
-  layered systems which have a lateral gradient in both their
-  refractive indices and their thickness. Simple fabrication of such
-  systems can be carried out through the electrochemical synthesis of
-  porous silicon (PS) using an etching current with a density $\bm
-  j(\bm r_\|)$ that has a spatial variation along the surface of the
-  sample. Thus, the possibility of predicting the local
-  value of $\bm j(\bm r_\|)$ and the corresponding values of the porosity
-  $p(\bm r_\|)$ and the etching rate $v(\bm r_\|)$ is desirable for a
-  systematic design of these structures.
-  In this work, we propose a simple analytical model based on a
-  fast converging planewise summation of Coulomb potentials in two
-  dimensional reciprocal space for the
-  calculation of $\bm j(\bm r_\|)$ as a function of position
-  within a prism shaped electrochemical cell. Some graded single layer PS samples
-  were synthesized and their optical reflectance were used to
-  estimate their local porosity $p(\bm r_\|)$ and thickness $d(\bm r_\|)$
-  which, together with our model, were then used to obtain the basic
-  calibration curves $p$ vs $\bm j$ and $v$ vs $\bm j$.
-  The dependence of porosity and thickness with position was
-  corroborated through scanning electron microscopy.
-  Agreement was found between the calibration curves from
-  different samples. Thus, from measurements on only one sample, our
-  model allows us to obtain full calibration curves which may be
-  used to predict, design, and fabricate more complex novel
+  Layered optical devices with a lateral gradient
+  can be fabricated through electrochemical synthesis of
+  porous silicon (PS) using a position dependent etching current
+  density  $\bm j(\bm r_\|)$. Predicting the local
+  value of $\bm j(\bm r_\|)$ and the corresponding porosity
+  $p(\bm r_\|)$ and etching rate $v(\bm r_\|)$ is desirable for their
+  systematic design.
+  We develop a simple analytical model for the
+  calculation of $\bm j(\bm r_\|)$ within a prism shaped
+  cell. Graded single layer PS samples
+  were synthesized and their local calibration curves $p$ vs $\bm j$ and $v$
+  vs $\bm j$ were obtained from our model and their reflectance spectra.
+  The agreement found between the calibration curves from
+  different samples shows that from one sample we
+  could obtain full calibration curves which may be
+  used to predict, design, and fabricate more complex
   non-homogenous multilayered devices with lateral gradients for
   manifold applications.
 \end{abstract}
+%  A variety of optical devices and applications are based on
+%  layered systems which have a lateral gradient in both their
+%  refractive indices and their thickness. Simple fabrication of such
+%  systems can be carried out through the electrochemical synthesis of
+%  porous silicon (PS) using an etching current with a density $\bm
+%  j(\bm r_\|)$ that has a spatial variation along the surface of the
+%  sample. Thus, the possibility of predicting the local
+%  value of $\bm j(\bm r_\|)$ and the corresponding values of the porosity
+%  $p(\bm r_\|)$ and the etching rate $v(\bm r_\|)$ is desirable for a
+%  systematic design of these structures.
+%  In this work, we propose a simple analytical model based on a
+%  fast converging planewise summation of Coulomb potentials in two
+%  dimensional reciprocal space for the
+%  calculation of $\bm j(\bm r_\|)$ as a function of position
+%  within a prism shaped electrochemical cell. Some graded single layer PS samples
+%  were synthesized and their optical reflectance were used to
+%  estimate their local porosity $p(\bm r_\|)$ and thickness $d(\bm r_\|)$
+%  which, together with our model, were then used to obtain the basic
+%  calibration curves $p$ vs $\bm j$ and $v$ vs $\bm j$.
+%  The dependence of porosity and thickness with position was
+%  corroborated through scanning electron microscopy.
+%  Agreement was found between the calibration curves from
+%  different samples. Thus, from measurements on only one sample, our
+%  model allows us to obtain full calibration curves which may be
+%  used to predict, design, and fabricate more complex novel
+%  non-homogenous multilayered devices with lateral gradients for
+%  manifold applications.
 
 \section{Introduction}
 \label{sec:introduction}
