Change caption of fig 5

--- a/paper.tex
+++ b/paper.tex
@@ -660,18 +660,18 @@ cross-sectional) was observed with a {\em Hitachi SU1510} scanning electron micr
 \label{sec:current-density}
 \begin{figure}
   \centering
-  \includegraphics[width=.8\textwidth]{j_Ivsxy.png}
-  \includegraphics[width=.6\textwidth]{j_Ivsx.png}
-  \caption{Normalized current density $j_\perp(x,y,0)/I$ calculated a
-    the surface of the sample through
-    Eq. (\ref{Eq:J}) for a
-    system as in Figs. \ref{f:celda} and \ref{fig:DE1} for a cell of
+  \begin{picture}(400,300)
+    \put(0,0){\includegraphics[width=.8\textwidth]{j_Ivsx.png}}
+    \put(160,140){\includegraphics[trim=50 50 70 80,clip,width=.4\textwidth]{j_Ivsxy.png}}
+  \end{picture}
+  \caption{Normalized current density $j_\perp(x,y,0)/I$ for a system
+    as in Figs. \ref{f:celda} and \ref{fig:DE1} for a cell of
     length $a = 2.01\,\text{cm}$ and width $b=1.48\,\text{cm}$, with
     the surface of the electrolyte at a heigth $c=1.0\,\text{cm}$, with a
     point-like electrode at $\bm r_0=(0.2\,\text{cm},
-    0.74\,\text{cm},0.9\,\text{cm})$ (top panel). Normalized current
-    along the center line $y=0.74\,\text{cm}$ (bottom
-    panel).}
+    0.74\,\text{cm},0.9\,\text{cm})$,  calculated through
+    Eq. (\ref{Eq:J}) along the center line
+    $y=0.74\,\text{cm}$. Inset: current over the whole surface.}
   \label{fig:DR1}
 \end{figure}
 In Fig. \ref{fig:DR1} we show the current density $j_\perp(x,y,0)$ calculated through
