Add panel letters to fig. 4

--- a/paper.tex
+++ b/paper.tex
@@ -551,10 +551,10 @@ properties.
   \includegraphics[width=.8\textwidth]{paper-4}\\[12pt]
   \includegraphics[width=.8\textwidth]{paper-5}
 
-  \caption{Schematic experimental set-up for
+  \caption{(a): Schematic experimental set-up for
     the fabrication of GRIN PS structures. We show a side view of the
     electrochemical cell with the shape of a
-    rectangular prism (top panel). We indicate the Si wafer (dark
+    rectangular prism. We indicate the Si wafer (dark
     gray), the teflon cell (light gray), the sealing o-ring (black
     circles), the insulated feeding cable (white lines within black
     lines), the uncovered platinum tip (white) within the
@@ -562,8 +562,7 @@ properties.
     (yellow) and the controlled current source. We indicate some geometrical
     parameters of the arrangement $x_0$, $z_0$, $a$ and $c$
     and a few schematic current flux
-    lines. Top and side schematic views of the resulting sample
-    (middle and lower panels),
+    lines. (b) and (c): Top and side schematic views of expected resulting sample
     illustrating eight regions $1\ldots8$ of decreasing porosity and thickness,
     illustrating the changes in pore radii,
     length, and density and the porosity gradient.}
