Add remark to avoid confusion about micrographs

--- a/paper.tex
+++ b/paper.tex
@@ -8,7 +8,7 @@
 %\usepackage[•]{•}ckage{float}
 %\usepackage{cite}% para contraer referencias
 %\usepackage[usenames]{color}
-%\usepackage{showkeys}
+\usepackage{showkeys}
 %\usepackage{ieeetr}
 \usepackage{bm}
 \usepackage{hyperref}
@@ -756,7 +756,7 @@ In Fig. \ref{fig:sem} we show some SEM images of the sample $G_3$,
 including top views and lateral views taken after
 the optical characterization was completed and the sample was cut
 along its centerline (see Sec. \ref{sec:R}) from
-three regions around to the left side, the center, and the right side
+three regions around the left side, the center, and the right side
 of the sample shown in Fig. \ref{fig:SI3}.
 \begin{figure}
   \centering
@@ -774,7 +774,14 @@ of the sample shown in Fig. \ref{fig:SI3}.
 \end{figure}
 We confirm that as we move away from the electrode, the pore
 size and pore density diminish (panels (a) to (c) of
-Fig. \ref{fig:sem}) and the sample becomes much thinner (panels (d) to (f)).
+Fig. \ref{fig:sem}) and the sample becomes much thinner (panels (d) to
+(f)). We remark that these micrographs were taken at three positions
+that do not correspond to the eight locations at which we measured the
+optical spectra. Thus, we didn't use them to obtain quantitatively the
+thickness nor the porosity of the PS layer, but to verify
+qualitative our expected results (Fig. \ref{fig:DE1}) and our
+actual results (Table \ref{t:jpdv}) obtained from our calculation and
+the optical spectra, as explained below.
 
 \subsection{Reflectance}\label{sec:R}
 
