Mention that in fig. 5 the current is normalized.

--- a/paper.tex
+++ b/paper.tex
@@ -673,7 +673,7 @@ cross-sectional) was observed with a {\em Hitachi SU1510} scanning electron micr
     $y=0.74\,\text{cm}$. Inset: current over the whole surface.}
   \label{fig:DR1}
 \end{figure}
-In Fig. \ref{fig:DR1} we show the current density $j_\perp(x,y,0)$ calculated through
+In Fig. \ref{fig:DR1} we show the normalized current density $j_\perp(x,y,0)/I$ calculated through
 Eq. \eqref{Eq:J} at the surface of the sample for our cell, as shown
 in Figs. \ref{f:celda} and \ref{fig:DE1} and described in
 Sect. \ref{sec:fabrication-ps-grin}). For these parameters we obtained
