Change G_n->S_n in text and figures

--- a/paper.tex
+++ b/paper.tex
@@ -600,7 +600,7 @@ platinum wire with a diameter of $0.41\,\text{mm}$ insulated with
 teflon tape, with an uncovered
 tip located at $\bm r_0=(x_0,
 y_0,z_0)=(0.2\,\text{cm},0.74\,\text{cm},0.9\,\text{cm})$.
-We manufactured three samples $G_1$, $G_2$ and $G_3$ by applying a
+We manufactured three samples $S_1$, $S_2$ and $S_3$ by applying a
 current $I_1=5\,\text{mA}$, $I_2=10\,\text{mA}$ and
 $I_3=20\,\text{mA}$, respectively, during a time of $t=250s$.
 
@@ -687,7 +687,7 @@ the electrode.
 \begin{figure}
  \centering
  \includegraphics[width=\textwidth]{G3I20proc}
-  \caption{ Photograph of sample $G_3$ prepared as described in
+  \caption{ Photograph of sample $S_3$ prepared as described in
     Sec. \ref{sec:fabrication-ps-grin} using the same parameters as
     in Fig. \ref{fig:DR1} with a current $ I_3=20 \text{mA}$,
     during a time $t=250\text{s}$. We indicate the centerline with a
@@ -702,7 +702,7 @@ the electrode.
 \end{figure}
 
 In Fig. \ref{fig:SI3} we show a photograph of one of our samples,
-$G_3$
+$S_3$
 prepared as described in Sec. \ref{sec:fabrication-ps-grin}, with the
 same conditions as those corresponding to Fig.~\ref{fig:DR1} applying
 a current
@@ -752,7 +752,7 @@ Fig. \ref{fig:SI3}.
   \label{t:xj}
 \end{table}
 
-In Fig. \ref{fig:sem} we show some SEM images of the sample $G_3$,
+In Fig. \ref{fig:sem} we show some SEM images of the sample $S_3$,
 including top views and lateral views taken after
 the optical characterization was completed and the sample was cut
 along its centerline (see Sec. \ref{sec:R}) from
@@ -767,7 +767,7 @@ of the sample shown in Fig. \ref{fig:SI3}.
   \includegraphics[width=.3\textwidth]{seme}
   \includegraphics[width=.3\textwidth]{semf}
   \caption{Top ((a), (b), and (c)) and lateral ((d), (e), and (f)) SEM
-    micrographs of the sample $G_3$ taken from a region corresponding to the left
+    micrographs of the sample $S_3$ taken from a region corresponding to the left
     side ((a) and (d)), center ((b) and (e)), and right side ((c) and
     (f)) along the centerline shown in Fig. \ref{fig:SI3}.}
   \label{fig:sem}
@@ -790,7 +790,7 @@ the optical spectra, as explained below.
   \includegraphics[width=\textwidth]{R5vslambda}
   \caption{Reflectance spectra at different positions
     ($x'_n=0.2-1.6\,\text{cm}$, $y=0.74\,\text{cm}$)
-    on sample $G_1$ ($I_1=5\,\text{mA}$). We show
+    on sample $S_1$ ($I_1=5\,\text{mA}$). We show
   experimental results and results fitted through
   equations~\eqref{Eq:ECMR} and \eqref{Eq:Brugg}}.
   \label{fig:R5}
@@ -800,7 +800,7 @@ the optical spectra, as explained below.
   \includegraphics[width=\textwidth]{R10vslambda}
   \caption{Reflectance spectra at different positions
     ($x'_n=0.2-1.6\,\text{cm}$, $y=0.74\,\text{cm}$)
-    on sample $G_2$ ($I_1=10\,\text{mA}$). We show
+    on sample $S_2$ ($I_1=10\,\text{mA}$). We show
   experimental results and results fitted through
   equations~\eqref{Eq:ECMR} and \eqref{Eq:Brugg}}.
   \label{fig:R10}
@@ -811,7 +811,7 @@ the optical spectra, as explained below.
   \includegraphics[width=\textwidth]{R20vslambda}
   \caption{Reflectance spectra at different positions
     ($x'_n=0.2-1.6\,\text{cm}$, $y=0.74\,\text{cm}$)
-    on sample $G_3$ ($I_3=20\,\text{mA}$) (Fig. \ref{fig:SI3}),
+    on sample $S_3$ ($I_3=20\,\text{mA}$) (Fig. \ref{fig:SI3}),
     We show
     experimental results and results fitted through
     equations~\eqref{Eq:ECMR} and \eqref{Eq:Brugg}}.
@@ -819,8 +819,8 @@ the optical spectra, as explained below.
 \end{figure}
 
 We measured the reflectance spectra  at the positions indicated in
-Fig. \ref{fig:SI3} on our three samples $G_1$, $G_2$,
-and $G_3$, prepared using the same procedure
+Fig. \ref{fig:SI3} on our three samples $S_1$, $S_2$,
+and $S_3$, prepared using the same procedure
 (Sec. \ref{sec:fabrication-ps-grin}) but applying different currents
 $I_1=5\,\text{mA}$, $I_2=10\,\text{mA}$, and $I_3=20\,\text{mA}$. The results are shown in
 Figs. \ref{fig:R5}, \ref{fig:R10}, and \ref{fig:R20}.
@@ -856,7 +856,7 @@ showing that the calibration was adequate.
   $I$ (mA) &$x'_n$ (cm)&  $j$ ($\text{mA}/\text{cm}^2$) & $p$
        & $d$ ($\mu\text{m}$) & $s$ & $v$ (nm/s)\\
 \hline
-$G_1$/ 5 &0.2 & 3.61 & 0.494 & 0.340 & 0.849&  1.361 \\
+$S_1$/ 5 &0.2 & 3.61 & 0.494 & 0.340 & 0.849&  1.361 \\
          &0.4 & 3.36 & 0.571 & 0.390 & 0.979&  1.558  \\
          &0.6  & 2.88& 0.566 & 0.331 & 0.957&  1.325 \\
          &0.8 & 2.32 & 0.556 & 0.273 & 0.954&  1.093 \\
@@ -864,7 +864,7 @@ $G_1$/ 5 &0.2 & 3.61 & 0.494 & 0.340 & 0.849&  1.361 \\
          &1.2 & 1.37 & 0.556 & 0.189 & 0.973&  0.754 \\
          &1.4 & 1.06 & 0.549 & 0.151 & 0.961&  0.605 \\
          &1.6 & 0.83 & 0.552 & 0.124 & 0.990&  0.495 \\
-$G_2$/10 &0.2 & 7.22 & 0.591 & 0.635 & 0.856&  2.539 \\
+$S_2$/10 &0.2 & 7.22 & 0.591 & 0.635 & 0.856&  2.539 \\
          &0.4 & 6.72 & 0.644 & 0.693 & 0.991&  2.774 \\
          &0.6 & 5.77 & 0.638 & 0.591 & 0.952&  2.363 \\
          &0.8 & 4.64 & 0.626 & 0.533 & 0.980&  2.131 \\
@@ -872,7 +872,7 @@ $G_2$/10 &0.2 & 7.22 & 0.591 & 0.635 & 0.856&  2.539 \\
          &1.2 & 2.75 & 0.590 & 0.404 & 0.945&  1.618 \\
          &1.4 & 2.11 & 0.575 & 0.338 & 0.936&  1.351 \\
          &1.6 & 1.67 & 0.571 & 0.296 & 0.948&  1.183 \\
-$G_3$/20 &0.2 &14.45 & 0.686 & 1.204 & 1.149&  4.818 \\
+$S_3$/20 &0.2 &14.45 & 0.686 & 1.204 & 1.149&  4.818 \\
          &0.4 & 13.44 & 0.713 & 1.193 & 1.078&  4.772 \\
          &0.6 & 11.54 & 0.703 & 1.044 & 1.059&  4.177 \\
          &0.8 &  9.29 & 0.626 & 0.752 & 1.006&  3.006 \\
@@ -893,11 +893,11 @@ samples in Fig. \ref{fig:p}.
   \centering
   \includegraphics[width=\textwidth]{pvsj}
   \caption{Porosity as a function of current density for three samples
-    $G_1$, $G_2$, $G_3$. The data points for each sample are joined by
+    $S_1$, $S_2$, $S_3$. The data points for each sample are joined by
     thick lines. The arrows point to data that correspond to
     position $x'_1=0.2\,\text{cm}$, joined to the other data by thin
     lines (see text). We include linear fits to the data from
-    sample $G_3$ (thick straight line) and to that from all the
+    sample $S_3$ (thick straight line) and to that from all the
     samples (thin straight line). }
   \label{fig:p}
 \end{figure}
@@ -907,9 +907,9 @@ $x'_1$. As discussed in Sec. \ref{sec:ps-grin-single}, those points
 were very close to a wall of the electrolytic cell, so they were
 affected by leakage currents towards the underside of the wall.
 For this reason, we exclude those points from the following
-analysis. We made a linear fit to the data from sample $G_3$ and to
+analysis. We made a linear fit to the data from sample $S_3$ and to
 the data from the three samples. A comparison shows that a fit to the
-data of just one sample, $G_3$, turns out to be a reasonable predictor for the
+data of just one sample, $S_3$, turns out to be a reasonable predictor for the
 porosity of all the samples.  From that fit we obtain that for our
 preparation conditions
 \begin{equation}\label{eq:p}
@@ -928,11 +928,11 @@ samples in Fig. \ref{fig:v}.
   \centering
   \includegraphics[width=\textwidth]{vvsj}
   \caption{Etching rate as a function of current density for three samples
-    $G_1$, $G_2$, $G_3$. The data points for each sample are joined by
+    $S_1$, $S_2$, $S_3$. The data points for each sample are joined by
     thick lines. The arrows point to data that correspond to
     position $x'_1=0.2\,\text{cm}$, joined to the other data by thin
     lines (see text). We include linear fits to the data from
-    sample $G_3$ (thick straight line) and to that from all the
+    sample $S_3$ (thick straight line) and to that from all the
     samples (thin straight line). }
   \label{fig:v}
 \end{figure}
@@ -940,7 +940,7 @@ As for the porosity, there are outlier points corresponding to the
 immediate proximity of the wall of the cell, but the remaining points
 lie on straight lines for each sample, and they
 may all be approximated by a linear fit to the data of just one
-sample, $G_3$, from which we get
+sample, $S_3$, from which we get
 \begin{equation}\label{eq:v}
   v\approx 0.35\frac{\text{cm}^2}{\text{mA}}
   \frac{\text{nm}}{\text{s}}j_\perp + 0.092\frac{\text{nm}}{{s}}.
@@ -963,8 +963,8 @@ to our samples.
     current $j_\perp$ and wavelength $\lambda$ for an etching time
     $t=250\,\text{s}$. Theory (left panel) and experiment (right
     panel, see text). We indicate with the numbers 1, 2, 3 the
-    data corresponding to the corresponding samples $G_1$, $G_2$
-    (shifted, see text) and  $G_3$.}
+    data corresponding to the corresponding samples $S_1$, $S_2$
+    (shifted, see text) and  $S_3$.}
   \label{fig:Rvsjl}
 \end{figure}
 On the right hand side of the figure we display a quilt made by
@@ -973,7 +973,7 @@ Figs. \ref{fig:R5}- \ref{fig:R20}, ordered according to the
 corresponding current density as presented in Table
 \ref{t:jpdv}. Nevertheless, for the reasons mentioned above, we
 eliminated the data corresponding to position $x'_1$ on all
-samples. Furthermore, as the results corresponding to sample $G_2$ in
+samples. Furthermore, as the results corresponding to sample $S_2$ in
 Figs. \ref{fig:p} and  \ref{fig:v} seem shifted with respect to those
 of the other samples, in order to facilitate the visualization of the
 results, we artificially shifted horizontally towards the
